More bug fixes, more SQL support, the start of IMC support

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -16,6 +16,7 @@ SQL_LIB		= -L/usr/lib/postgresql -lpq -lecpg
 ID_DEP		= $(IDENTDIR)/libident.a
 ID_INC		= #
 ID_LIB		= -L$(IDENTDIR) -lident
+IMC_INC		= -DIMC -DIMCWILEY
 
 W_ERROR         = -Werror
 W_ANSI          = #-pedantic
@@ -33,12 +34,14 @@ W_FLAGS		= $(W_ERROR) $(W_ANSI) $(W_UBER) $(W_FORMAT) $(W_MESSY) $(W_TYPE) $(W_E
 
 OPT_FLAG	= -pipe -O3 #-Wuninitialized
 
-DEBUG_FLAG	= -ggdb
+ADDL_DEBUG	= #-DTIME_DEBUG
+DEBUG_FLAG	= -ggdb3
 EFENCE		= #-lpthread -lefence
 PROF_FLAG	= #-pg
 
-INC		= -Iinclude $(SQL_INC) $(ID_INC)
+INC		= -Iinclude $(SQL_INC) $(ID_INC) $(IMC_INC)
 LIB		= $(ID_LIB) $(NEED_CRYPT) $(NEED_COMPAT) $(EFENCE) $(SQL_LIB)
+AUXLIB		= $(NEED_CRYPT) $(NEED_COMPAT) $(EFENCE)
 
 CFLAGS		= $(W_FLAGS) $(DEBUG_FLAG) $(OPT_FLAG) $(PROF_FLAG) $(INC)
 LDFLAGS		= $(DEBUG_FLAG) $(OPT_FLAG) $(PROF_FLAG)
@@ -55,7 +58,7 @@ tOBJ =	mob_actions.o spec_procs.o breath_weapons.o tracking.o \
 	modify.o multiclass.o opinion.o random.o reception.o \
 	shop.o signals.o sound.o spell_parser.o \
 	spells.o trap.o utils.o weather.o whod.o events.o \
-	sql.o ban.o
+	sql.o ban.o sha256.o imc.o #i3.o
 OBJ =	$(addprefix obj/, $(tOBJ))
 
 tIDOBJ		= id_close.o id_open.o id_parse.o \
@@ -73,19 +76,19 @@ $(BINDIR)/wileymud : $(ID_DEP) $(OBJ)
 
 $(BINDIR)/mkworld : obj/mkworld.o
 	@echo Make the world editing program...
-	$(CC) $(LDFLAGS) -o $@ $< $(LIB)
+	$(CC) $(LDFLAGS) -o $@ $< $(AUXLIB)
 
 $(BINDIR)/sign : obj/sign.o
 	@echo Make the downtime notice program...
-	$(CC) $(LDFLAGS) -o $@ $< $(LIB)
+	$(CC) $(LDFLAGS) -o $@ $< $(AUXLIB)
 
 $(BINDIR)/genpasswd : obj/genpasswd.o
 	@echo Make the password generation program...
-	$(CC) $(LDFLAGS) -o $@ $< $(LIB)
+	$(CC) $(LDFLAGS) -o $@ $< $(AUXLIB)
 
 $(BINDIR)/bounce : obj/bounce.o
 	@echo Make the port bouncer program...
-	$(CC) $(LDFLAGS) -o $@ $< $(LIB)
+	$(CC) $(LDFLAGS) -o $@ $< $(AUXLIB)
 
 $(ID_DEP): $(IDOBJ)
 	(cd $(IDENTDIR);$(MAKE) linux)
@@ -94,7 +97,7 @@ $(ID_DEP): $(IDOBJ)
 
 depend :
 	@echo 'Building dependancies'
-	@find . -name \*.c -a -type f -print0 | grep -z -Z -v attic | xargs -0 -P 1 -r $(CC) $(CFLAGS) -MM >.deps
+	@find . -name \*.c -a -type f -print0 | grep -z -Z -v convert | xargs -0 -P 1 -r $(CC) $(CFLAGS) -MM >.deps
 	@echo 'Self-Modifying GNUmakefile'
 	@head -$(DEPLINE) GNUmakefile >.new_makefile
 	@cat .deps | perl -ne '{ s!^([^:]+):!obj/$$1:!; print $$_; }' >>.new_makefile
@@ -114,11 +117,22 @@ version :
 	@echo '#endif /* _VERSION_H */' >> $(VER)
 	@echo New version file generated.
 
+.PHONY : spotless
+
+spotless :
+	@echo -n Wiping away all generated files...
+	@find . -name \*.o -a -type f -print0 | xargs -0 -P 1 -r rm -f
+	@find . -name \*.a -a -type f -print0 | xargs -0 -P 1 -r rm -f
+	@rm -f tags
+	@rm -f $(BINDIR)/sign $(BINDIR)/bounce $(BINDIR)/genpasswd $(BINDIR)/mkworld $(BINDIR)/wileymud 
+	@echo done.
+
 .PHONY : clean
 
 clean :
 	@echo -n Wiping away intermediate clutter...
 	@find . -name \*.o -a -type f -print0 | xargs -0 -P 1 -r rm -f
+	@find . -name \*.a -a -type f -print0 | xargs -0 -P 1 -r rm -f
 	@rm -f tags
 	@echo done.
 
@@ -126,7 +140,7 @@ clean :
 
 tags :
 	@echo -n Making tag files...
-	@find . -name \*.[ch] -a -type f -print0 | grep -z -Z -v attic | xargs -0 -P 1 -r ctags
+	@find . -name \*.[ch] -a -type f -print0 | grep -z -Z -v convert | xargs -0 -P 1 -r ctags
 	@echo done.
 
 %c : %pgc
@@ -143,6 +157,9 @@ obj/breath_weapons.o: breath_weapons.c include/global.h include/bug.h \
   include/utils.h include/act_off.h include/comm.h include/db.h \
   include/mudlimits.h include/multiclass.h include/spells.h \
   include/breath_weapons.h
+obj/imc.o: imc.c include/sha256.h include/global.h include/bug.h \
+  include/utils.h include/multiclass.h include/comm.h include/constants.h \
+  include/modify.h include/imc.h include/imccfg.h
 obj/sound.o: sound.c include/global.h include/bug.h include/comm.h \
   include/interpreter.h include/handler.h include/db.h include/spells.h \
   include/trap.h include/utils.h include/sound.h
@@ -161,12 +178,14 @@ obj/spell_parser.o: spell_parser.c include/global.h include/bug.h \
   include/handler.h include/spells.h include/constants.h \
   include/act_off.h include/random.h include/multiclass.h include/fight.h \
   include/act_info.h include/spell_parser.h
-obj/db.o: db.c include/global.h include/bug.h include/utils.h include/comm.h \
-  include/handler.h include/mudlimits.h include/opinion.h include/hash.h \
-  include/constants.h include/spells.h include/spell_parser.h \
-  include/reception.h include/weather.h include/modify.h include/fight.h \
-  include/act_social.h include/spec_procs.h include/multiclass.h \
-  include/board.h include/interpreter.h include/ban.h include/db.h
+obj/sha256.o: sha256.c include/sha256.h
+obj/db.o: db.c include/global.h include/imc.h include/imccfg.h include/bug.h \
+  include/utils.h include/comm.h include/handler.h include/mudlimits.h \
+  include/opinion.h include/hash.h include/constants.h include/spells.h \
+  include/spell_parser.h include/reception.h include/weather.h \
+  include/modify.h include/fight.h include/act_social.h \
+  include/spec_procs.h include/multiclass.h include/board.h \
+  include/interpreter.h include/ban.h include/db.h
 obj/events.o: events.c include/global.h include/bug.h include/utils.h \
   include/comm.h include/interpreter.h include/handler.h include/db.h \
   include/spells.h include/mudlimits.h include/constants.h \
@@ -254,53 +273,17 @@ obj/genpasswd.o: aux/genpasswd.c
 obj/sign.o: aux/sign.c include/global.h include/bug.h
 obj/bounce.o: aux/bounce.c
 obj/mkworld.o: aux/mkworld.c
-obj/dump_afk.o: convert/dump_afk.c convert/include/structs.h \
-  convert/include/main.h convert/include/utils.h \
-  convert/include/parse_wiley.h convert/include/dump_afk.h \
-  convert/include/afk_skills.h
-obj/parse_wiley.o: convert/parse_wiley.c convert/include/bug.h \
-  convert/include/structs.h convert/include/main.h \
-  convert/include/utils.h convert/include/make_index.h \
-  convert/include/parse_wiley.h
-obj/dump_report.o: convert/dump_report.c convert/include/structs.h \
-  convert/include/main.h convert/include/utils.h \
-  convert/include/parse_wiley.h convert/include/dump_report.h
-obj/make_index.o: convert/make_index.c convert/include/bug.h \
-  convert/include/structs.h convert/include/main.h \
-  convert/include/utils.h convert/include/make_index.h
-obj/getopt.o: convert/getopt.c
-obj/utils.o: convert/utils.c convert/include/bug.h convert/include/structs.h \
-  convert/include/main.h convert/include/utils.h
-obj/formats.o: convert/formats.c convert/include/formats.h
-obj/main.o: convert/main.c convert/include/getopt.h convert/include/bug.h \
-  convert/include/formats.h convert/include/structs.h \
-  convert/include/main.h convert/include/utils.h \
-  convert/include/make_index.h convert/include/parse_wiley.h \
-  convert/include/dump_map.h convert/include/dump_report.h \
-  convert/include/dump_isles.h convert/include/dump_fr.h \
-  convert/include/dump_afk.h
-obj/bug.o: convert/bug.c convert/include/bug.h
-obj/dump_map.o: convert/dump_map.c convert/include/structs.h \
-  convert/include/main.h convert/include/utils.h \
-  convert/include/parse_wiley.h convert/include/dump_map.h
-obj/dump_isles.o: convert/dump_isles.c convert/include/structs.h \
-  convert/include/main.h convert/include/utils.h \
-  convert/include/parse_wiley.h convert/include/dump_isles.h
-obj/dump_fr.o: convert/dump_fr.c convert/include/structs.h \
-  convert/include/main.h convert/include/utils.h \
-  convert/include/parse_wiley.h convert/include/dump_fr.h
-obj/getopt1.o: convert/getopt1.c convert/include/getopt.h
 obj/hash.o: hash.c include/global.h include/bug.h include/comm.h \
   include/utils.h include/hash.h
-obj/interpreter.o: interpreter.c include/global.h include/bug.h \
-  include/comm.h include/version.h include/db.h include/utils.h \
-  include/mudlimits.h include/constants.h include/act_comm.h \
-  include/act_info.h include/act_move.h include/act_obj.h \
-  include/act_off.h include/act_other.h include/act_skills.h \
-  include/act_social.h include/act_wiz.h include/spells.h \
-  include/spell_parser.h include/modify.h include/whod.h include/events.h \
-  include/random.h include/board.h include/multiclass.h include/handler.h \
-  include/reception.h include/tracking.h include/ban.h \
+obj/interpreter.o: interpreter.c include/global.h include/imc.h \
+  include/imccfg.h include/bug.h include/comm.h include/version.h \
+  include/db.h include/utils.h include/mudlimits.h include/constants.h \
+  include/act_comm.h include/act_info.h include/act_move.h \
+  include/act_obj.h include/act_off.h include/act_other.h \
+  include/act_skills.h include/act_social.h include/act_wiz.h \
+  include/spells.h include/spell_parser.h include/modify.h include/whod.h \
+  include/events.h include/random.h include/board.h include/multiclass.h \
+  include/handler.h include/reception.h include/tracking.h include/ban.h \
   include/interpreter.h
 obj/fight.o: fight.c include/global.h include/bug.h include/utils.h \
   include/comm.h include/handler.h include/interpreter.h include/db.h \
@@ -314,13 +297,13 @@ obj/trap.o: trap.c include/global.h include/bug.h include/utils.h \
   include/constants.h include/fight.h include/reception.h \
   include/spell_parser.h include/multiclass.h include/handler.h \
   include/act_info.h include/trap.h
-obj/comm.o: comm.c include/global.h include/bug.h include/utils.h \
-  include/interpreter.h include/handler.h include/db.h include/modify.h \
-  include/whod.h include/multiclass.h include/weather.h \
-  include/mudlimits.h include/spells.h include/spell_parser.h \
-  include/sound.h include/fight.h include/mob_actions.h \
-  include/act_other.h include/signals.h include/sql.h include/ban.h \
-  include/comm.h
+obj/comm.o: comm.c include/global.h include/imc.h include/imccfg.h \
+  include/bug.h include/utils.h include/interpreter.h include/handler.h \
+  include/db.h include/modify.h include/whod.h include/multiclass.h \
+  include/weather.h include/mudlimits.h include/spells.h \
+  include/spell_parser.h include/sound.h include/fight.h \
+  include/mob_actions.h include/act_other.h include/signals.h \
+  include/sql.h include/ban.h include/comm.h
 obj/magic_utils.o: magic_utils.c include/global.h include/bug.h \
   include/utils.h include/comm.h include/db.h include/spells.h \
   include/handler.h include/mudlimits.h include/fight.h \
