Update board support, fixed a socket bug, tweaked IMC a bit, nuked old rogue admins

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -155,6 +155,9 @@ install : bin
 	@cp -p $(BINDIR)/wileymud $(BINDIR)/sign $(BINDIR)/bounce $(BINDIR)/genpasswd $(BINDIR)/mkworld $(PRODBIN)/
 	@chown $(PRODOWN) $(PRODBIN)/wileymud $(PRODBIN)/sign $(PRODBIN)/bounce $(PRODBIN)/genpasswd $(PRODBIN)/mkworld
 	@chmod $(PRODMODE) $(PRODBIN)/wileymud $(PRODBIN)/sign $(PRODBIN)/bounce $(PRODBIN)/genpasswd $(PRODBIN)/mkworld
+	@cp -p utils/wileyloop.sh $(PRODBIN)/wileyloop
+	@chown $(PRODOWN) $(PRODBIN)/wileyloop
+	@chmod $(PRODMODE) $(PRODBIN)/wileyloop 
 	@echo done.
 
 %c : %pgc
