Just a next-to-last checkin from brezhnev

--- a/lib/i3/i3.config
+++ b/lib/i3/i3.config
@@ -3,10 +3,10 @@ $I3CONFIG
 # This file will now allow you to use tildes.
 # Set autoconnect to 1 to automatically connect at bootup.
 # This information can be edited online using 'i3config'
-thismud      WileyMUD
+thismud      WileyMUD-bkp
 autoconnect  1
 telnet       wiley.shadowlord.org
-web          http://wiley.shadowlord.org:8088/
+web          http://wiley.shadowlord.org/
 adminemail   quixadhal@shadowlord.org
 openstatus   Idle
 mudtype      DikuMUD
