Completed removal of SQL ban code.

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -205,9 +205,6 @@ obj/comm.o: comm.c include/global.h include/i3.h include/imc.h \
 obj/i3.o: i3.c include/global.h include/bug.h include/utils.h \
  include/multiclass.h include/comm.h include/constants.h include/modify.h \
  include/interpreter.h include/version.h include/i3.h
-obj/redone-ban.o: redone-ban.c include/global.h include/utils.h \
- include/comm.h include/modify.h include/interpreter.h include/db.h \
- include/bug.h include/ban.h
 obj/act_off.o: act_off.c include/global.h include/bug.h include/utils.h \
  include/comm.h include/interpreter.h include/handler.h include/db.h \
  include/spells.h include/mudlimits.h include/opinion.h \
@@ -247,6 +244,9 @@ obj/act_comm.o: act_comm.c include/global.h include/bug.h include/utils.h \
 obj/sound.o: sound.c include/global.h include/bug.h include/comm.h \
  include/interpreter.h include/handler.h include/db.h include/spells.h \
  include/trap.h include/utils.h include/sound.h
+obj/ban.o: ban.c include/global.h include/utils.h include/comm.h \
+ include/modify.h include/interpreter.h include/db.h include/bug.h \
+ include/ban.h
 obj/magic.o: magic.c include/global.h include/bug.h include/utils.h \
  include/comm.h include/handler.h include/mudlimits.h include/db.h \
  include/constants.h include/spells.h include/spell_parser.h \
