Update to whod to return a mudlist as well as the who list, in html

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -224,7 +224,7 @@ obj/limits.o: limits.c include/global.h include/bug.h include/spells.h \
   include/act_obj.h include/act_other.h include/mudlimits.h
 obj/whod.o: whod.c include/version.h include/global.h include/bug.h \
   include/db.h include/comm.h include/utils.h include/interpreter.h \
-  include/multiclass.h include/whod.h
+  include/multiclass.h include/i3.h include/whod.h
 obj/bounce.o: utils/bounce.c
 obj/genpasswd.o: utils/genpasswd.c
 obj/mkworld.o: utils/mkworld.c
