--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -408,4 +408,4 @@ obj/act_info.o: act_info.c include/global.h include/bug.h include/version.h \
   include/hash.h include/constants.h include/spell_parser.h \
   include/whod.h include/multiclass.h include/modify.h include/act_wiz.h \
   include/act_skills.h include/spec_procs.h include/tracking.h \
-  include/act_info.h
+  include/i3.h include/act_info.h
