Created some routines for a future migration away from ticks

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -77,7 +77,7 @@ tOBJ =	mob_actions.o spec_procs.o breath_weapons.o tracking.o \
 	modify.o multiclass.o opinion.o random.o reception.o \
 	shop.o signals.o sound.o spell_parser.o \
 	spells.o trap.o utils.o weather.o whod.o events.o \
-	ban.o sha256.o imc.o i3.o sql.o stringmap.o
+	ban.o sha256.o imc.o i3.o sql.o stringmap.o scheduler.o
 OBJ =	$(addprefix obj/, $(tOBJ))
 
 tIDOBJ		= id_close.o id_open.o id_parse.o \
@@ -214,8 +214,6 @@ obj/i3.o: i3.c include/global.h include/sql.h include/bug.h include/utils.h \
   include/multiclass.h include/comm.h include/constants.h \
   include/modify.h include/interpreter.h include/version.h \
   include/stringmap.h include/i3.h
-obj/untiny.o: untiny.c include/global.h include/bug.h include/sql.h \
-  include/stringmap.h include/untiny.h
 obj/act_off.o: act_off.c include/global.h include/bug.h include/utils.h \
   include/comm.h include/interpreter.h include/handler.h include/db.h \
   include/spells.h include/mudlimits.h include/opinion.h \
@@ -392,6 +390,8 @@ obj/act_skills.o: act_skills.c include/global.h include/bug.h include/utils.h \
   include/interpreter.h include/multiclass.h include/spells.h \
   include/spell_parser.h include/fight.h include/spec_procs.h \
   include/act_info.h include/act_skills.h
+obj/scheduler.o: scheduler.c include/global.h include/bug.h include/utils.h \
+  include/comm.h include/scheduler.h
 obj/interpreter.o: interpreter.c include/global.h include/i3.h include/bug.h \
   include/comm.h include/version.h include/db.h include/utils.h \
   include/mudlimits.h include/constants.h include/act_comm.h \
