A few tweaks from the VM

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -7,7 +7,7 @@ CC		= clang #gcc #g++
 MAKE		= make #gmake
 
 PRODBIN		= ../bin
-PRODOWN		= wiley.users
+PRODOWN		= wiley.wiley
 PRODMODE	= 0750
 
 BINDIR		= bin
