--- a/etc/systemd/dw_addr.service
+++ b/etc/systemd/dw_addr.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Disk World Address Server
-Requires=network-online.target
-After=network-online.target
+PartOf=diskworld.service
+After=diskworld.service
 
 [Service]
 Type=simple
@@ -14,4 +14,4 @@ ExecStart=/home/wiley/dw/bin/addr_server 4444
 Restart=always
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=diskworld.service
