--- a/etc/systemd/dw_driver.service
+++ b/etc/systemd/dw_driver.service
@@ -1,6 +1,7 @@
 [Unit]
-Description=Disk World MUD
-Requires=dw_addr.service
+Description=Disk World Game Driver
+PartOf=diskworld.service
+After=diskworld.service
 After=dw_addr.service
 
 [Service]
@@ -10,12 +11,10 @@ Group=wiley
 Environment=LANG=en_US.utf8
 Environment=LC_ALL=en_US.utf8
 WorkingDirectory=/home/wiley/dw/bin
+ExecStartPre=/usr/bin/sleep 30
 ExecStart=/home/wiley/dw/bin/driver dw.cfg
 Restart=always
-RestartSec=30
 RestartPreventExitStatus=255
 
 [Install]
-WantedBy=multi-user.target
-Alias=diskworld.service
-Also=dw_addr.service
+WantedBy=diskworld.service
