--- a/etc/systemd/wileymud.service
+++ b/etc/systemd/wileymud.service
@@ -11,6 +11,7 @@ Environment=LANG=en_US.utf8
 Environment=LC_ALL=en_US.utf8
 Environment=MALLOC_CHECK=2
 WorkingDirectory=/home/wiley/bin
+ExecStartPre=/usr/bin/sleep 10
 ExecStart=/home/wiley/bin/wileymud -L /home/wiley/lib/log 3000
 ExecReload=/bin/kill -TERM $MAINPID
 TimeoutStopSec=30
