Fixed an OLD bug with player flags, added autoexit

--- a/public_html/.gitignore
+++ b/public_html/.gitignore
@@ -7,3 +7,9 @@ i3log_sql.php
 index_old.php
 menu.php
 archive
+BatMUD
+Books
+CoffeeMUD-Docs
+i3.channels.txt
+jquery-3.3.1.min.js
+jquery-ui-1.12.1.custom
