Added UTF-8 aware message wrapping to I3, and a few other tweaks

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -379,7 +379,7 @@ obj/interpreter.o: interpreter.c include/global.h include/i3.h include/bug.h \
   include/spell_parser.h include/modify.h include/whod.h \
   include/events.h include/random.h include/board.h include/multiclass.h \
   include/handler.h include/reception.h include/tracking.h include/ban.h \
-  include/interpreter.h
+  include/sql.h include/interpreter.h
 obj/fight.o: fight.c include/global.h include/bug.h include/utils.h \
   include/comm.h include/handler.h include/interpreter.h include/db.h \
   include/constants.h include/spells.h include/spell_parser.h \
@@ -413,8 +413,8 @@ obj/spell_parser.o: spell_parser.c include/global.h include/bug.h \
   include/act_off.h include/random.h include/multiclass.h \
   include/fight.h include/act_info.h include/spell_parser.h
 obj/sql.o: sql.c include/global.h include/bug.h include/comm.h \
-  include/version.h include/crc32.h include/utils.h include/i3.h \
-  include/sql.h
+  include/version.h include/crc32.h include/interpreter.h \
+  include/utils.h include/i3.h include/sql.h
 obj/db.o: db.c include/global.h include/i3.h include/bug.h include/utils.h \
   include/comm.h include/handler.h include/mudlimits.h include/opinion.h \
   include/hash.h include/constants.h include/spells.h \
