--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -414,11 +414,11 @@ obj/spell_parser.o: spell_parser.c include/global.h include/bug.h \
   include/fight.h include/act_info.h include/spell_parser.h
 obj/sql.o: sql.c include/global.h include/bug.h include/comm.h \
   include/version.h include/crc32.h include/interpreter.h \
-  include/utils.h include/i3.h include/sql.h
+  include/utils.h include/db.h include/i3.h include/sql.h
 obj/db.o: db.c include/global.h include/i3.h include/bug.h include/utils.h \
   include/comm.h include/handler.h include/mudlimits.h include/opinion.h \
   include/hash.h include/constants.h include/spells.h \
   include/spell_parser.h include/reception.h include/weather.h \
   include/modify.h include/fight.h include/act_social.h \
   include/spec_procs.h include/multiclass.h include/board.h \
-  include/interpreter.h include/ban.h include/db.h
+  include/interpreter.h include/ban.h include/sql.h include/db.h
